# agent_swarm

./: .gitignore  ONBOARDING.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.claude/: .gitignore
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: probe_stream.rs
src-tauri/src/: error_code.rs  lib.rs  main.rs  mission_template.rs
src-tauri/src/agent/: approval.rs  approval_gate.rs  artifacts.rs  belief_state.rs  budget_tracker.rs  chat.rs  codebase_intel.rs  conflict_resolver.rs  delivery.rs  engine.rs  evaluator.rs  fallback.rs  guardrail.rs  merge_prompt.rs  mod.rs  planner.rs  planner_engine.rs  planner_fetch.rs  planner_merge_inject.rs  planner_state.rs  planner_tools.rs  preflight_perf.rs  recovery_log.rs  registry.rs  report_generator.rs  roles.rs  runtime_env.rs  scheduler.rs  streaming_tool_executor.rs  task_contract.rs  tool_result_policy.rs  tool_summarizer.rs  types.rs  user_questions.rs
src-tauri/src/benchmark/: compare.rs  export.rs  grader.rs  importer.rs  metrics.rs  mod.rs  runner.rs  sop_bench.rs  types.rs
src-tauri/src/commands/: agent.rs  approval.rs  artifacts.rs  chat.rs  config.rs  delivery.rs  insights.rs  mission.rs  mod.rs  planner.rs  preflight.rs  report.rs  review.rs  skills.rs  system.rs
src-tauri/src/db/: migrations.rs  mod.rs  pool.rs  queries.rs
src-tauri/src/git/: init.rs  llm_merge.rs  merge_strategy.rs  mod.rs  worktree.rs
src-tauri/src/llm/: anthropic.rs  deepseek_adapter.rs  error_class.rs  mod.rs  openai_compat.rs  provider.rs  registry.rs  stream_diagnostics.rs  stream_guard.rs  types.rs
(+358 files in other folders)
