[package]
name = "miragenty"
version = "0.1.0"
description = "Miragenty - AI Agent Swarm Commander"
authors = ["miragelyu"]
edition = "2021"

[lib]
name = "miragenty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
async-trait = "0.1"
dirs = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]
